tests/neg/erased-object.scala
//> using options -experimental -language:experimental.erasedDefinitions

erased object Test // error
